app/translate.output
Terminals unused in grammar

    PRINTF
    EQ
    NEQ
    GE
    LE
    GT
    LT
    INC
    DEC
    DOT


Grammar

    0 $accept: program $end

    1 program: declarations

    2 declarations: declarations declaration
    3             | declaration

    4 declaration: INT IDENTIFIER SEMICOLON
    5            | INT IDENTIFIER ASSIGN expression SEMICOLON
    6            | INT IDENTIFIER LBRACKET RBRACKET SEMICOLON
    7            | INT IDENTIFIER LBRACKET RBRACKET ASSIGN array_initializer SEMICOLON
    8            | function_definition

    9 function_definition: INT IDENTIFIER LPAREN RPAREN compound_statement

   10 compound_statement: LBRACE statements RBRACE

   11 statements: statements statement
   12           | statement

   13 statement: expression_statement
   14          | compound_statement
   15          | selection_statement
   16          | iteration_statement
   17          | jump_statement

   18 expression_statement: expression SEMICOLON
   19                     | SEMICOLON

   20 selection_statement: IF LPAREN expression RPAREN statement
   21                    | IF LPAREN expression RPAREN statement ELSE statement

   22 iteration_statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement
   23                    | WHILE LPAREN expression RPAREN statement

   24 jump_statement: RETURN expression SEMICOLON

   25 expression: IDENTIFIER ASSIGN expression
   26           | function_call
   27           | simple_expression
   28           | SIZEOF LPAREN expression RPAREN

   29 function_call: IDENTIFIER LPAREN argument_list_opt RPAREN

   30 simple_expression: simple_expression PLUS term
   31                  | simple_expression MINUS term
   32                  | term

   33 term: term MULT factor
   34     | term DIV factor
   35     | factor

   36 factor: LPAREN expression RPAREN
   37       | IDENTIFIER
   38       | IDENTIFIER LBRACKET expression RBRACKET
   39       | NUMBER
   40       | STRING_LITERAL
   41       | FLOAT

   42 argument_list_opt: %empty
   43                  | argument_list

   44 argument_list: expression
   45              | argument_list COMMA expression

   46 array_initializer: LBRACE initializer_list RBRACE

   47 initializer_list: expression
   48                 | initializer_list COMMA expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <str> (258) 4 5 6 7 9 25 29 37 38
    STRING_LITERAL <str> (259) 40
    NUMBER <num> (260) 39
    FLOAT <num> (261) 41
    SIZEOF (262) 28
    INT (263) 4 5 6 7 9
    RETURN (264) 24
    IF (265) 20 21
    ELSE (266) 21
    FOR (267) 22
    WHILE (268) 23
    PRINTF (269)
    EQ (270)
    NEQ (271)
    GE (272)
    LE (273)
    GT (274)
    LT (275)
    ASSIGN (276) 5 7 25
    PLUS (277) 30
    MINUS (278) 31
    MULT (279) 33
    DIV (280) 34
    INC (281)
    DEC (282)
    DOT (283)
    SEMICOLON (284) 4 5 6 7 18 19 24
    COMMA (285) 45 48
    LPAREN (286) 9 20 21 22 23 28 29 36
    RPAREN (287) 9 20 21 22 23 28 29 36
    LBRACE (288) 10 46
    RBRACE (289) 10 46
    LBRACKET (290) 6 7 38
    RBRACKET (291) 6 7 38
    LOWER_THAN_ELSE (292)


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    program (39)
        on left: 1
        on right: 0
    declarations (40)
        on left: 2 3
        on right: 1 2
    declaration (41)
        on left: 4 5 6 7 8
        on right: 2 3
    function_definition (42)
        on left: 9
        on right: 8
    compound_statement (43)
        on left: 10
        on right: 9 14
    statements (44)
        on left: 11 12
        on right: 10 11
    statement (45)
        on left: 13 14 15 16 17
        on right: 11 12 20 21 22 23
    expression_statement (46)
        on left: 18 19
        on right: 13 22
    selection_statement (47)
        on left: 20 21
        on right: 15
    iteration_statement (48)
        on left: 22 23
        on right: 16
    jump_statement (49)
        on left: 24
        on right: 17
    expression (50)
        on left: 25 26 27 28
        on right: 5 18 20 21 22 23 24 25 28 36 38 44 45 47 48
    function_call (51)
        on left: 29
        on right: 26
    simple_expression (52)
        on left: 30 31 32
        on right: 27 30 31
    term (53)
        on left: 33 34 35
        on right: 30 31 32 33 34
    factor (54)
        on left: 36 37 38 39 40 41
        on right: 33 34 35
    argument_list_opt (55)
        on left: 42 43
        on right: 29
    argument_list (56)
        on left: 44 45
        on right: 43 45
    array_initializer (57)
        on left: 46
        on right: 7
    initializer_list (58)
        on left: 47 48
        on right: 46 48


State 0

    0 $accept: . program $end

    INT  shift, and go to state 1

    program              go to state 2
    declarations         go to state 3
    declaration          go to state 4
    function_definition  go to state 5


State 1

    4 declaration: INT . IDENTIFIER SEMICOLON
    5            | INT . IDENTIFIER ASSIGN expression SEMICOLON
    6            | INT . IDENTIFIER LBRACKET RBRACKET SEMICOLON
    7            | INT . IDENTIFIER LBRACKET RBRACKET ASSIGN array_initializer SEMICOLON
    9 function_definition: INT . IDENTIFIER LPAREN RPAREN compound_statement

    IDENTIFIER  shift, and go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: declarations .
    2 declarations: declarations . declaration

    INT  shift, and go to state 1

    $default  reduce using rule 1 (program)

    declaration          go to state 8
    function_definition  go to state 5


State 4

    3 declarations: declaration .

    $default  reduce using rule 3 (declarations)


State 5

    8 declaration: function_definition .

    $default  reduce using rule 8 (declaration)


State 6

    4 declaration: INT IDENTIFIER . SEMICOLON
    5            | INT IDENTIFIER . ASSIGN expression SEMICOLON
    6            | INT IDENTIFIER . LBRACKET RBRACKET SEMICOLON
    7            | INT IDENTIFIER . LBRACKET RBRACKET ASSIGN array_initializer SEMICOLON
    9 function_definition: INT IDENTIFIER . LPAREN RPAREN compound_statement

    ASSIGN     shift, and go to state 9
    SEMICOLON  shift, and go to state 10
    LPAREN     shift, and go to state 11
    LBRACKET   shift, and go to state 12


State 7

    0 $accept: program $end .

    $default  accept


State 8

    2 declarations: declarations declaration .

    $default  reduce using rule 2 (declarations)


State 9

    5 declaration: INT IDENTIFIER ASSIGN . expression SEMICOLON

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    LPAREN          shift, and go to state 18

    expression         go to state 19
    function_call      go to state 20
    simple_expression  go to state 21
    term               go to state 22
    factor             go to state 23


State 10

    4 declaration: INT IDENTIFIER SEMICOLON .

    $default  reduce using rule 4 (declaration)


State 11

    9 function_definition: INT IDENTIFIER LPAREN . RPAREN compound_statement

    RPAREN  shift, and go to state 24


State 12

    6 declaration: INT IDENTIFIER LBRACKET . RBRACKET SEMICOLON
    7            | INT IDENTIFIER LBRACKET . RBRACKET ASSIGN array_initializer SEMICOLON

    RBRACKET  shift, and go to state 25


State 13

   25 expression: IDENTIFIER . ASSIGN expression
   29 function_call: IDENTIFIER . LPAREN argument_list_opt RPAREN
   37 factor: IDENTIFIER .
   38       | IDENTIFIER . LBRACKET expression RBRACKET

    ASSIGN    shift, and go to state 26
    LPAREN    shift, and go to state 27
    LBRACKET  shift, and go to state 28

    $default  reduce using rule 37 (factor)


State 14

   40 factor: STRING_LITERAL .

    $default  reduce using rule 40 (factor)


State 15

   39 factor: NUMBER .

    $default  reduce using rule 39 (factor)


State 16

   41 factor: FLOAT .

    $default  reduce using rule 41 (factor)


State 17

   28 expression: SIZEOF . LPAREN expression RPAREN

    LPAREN  shift, and go to state 29


State 18

   36 factor: LPAREN . expression RPAREN

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    LPAREN          shift, and go to state 18

    expression         go to state 30
    function_call      go to state 20
    simple_expression  go to state 21
    term               go to state 22
    factor             go to state 23


State 19

    5 declaration: INT IDENTIFIER ASSIGN expression . SEMICOLON

    SEMICOLON  shift, and go to state 31


State 20

   26 expression: function_call .

    $default  reduce using rule 26 (expression)


State 21

   27 expression: simple_expression .
   30 simple_expression: simple_expression . PLUS term
   31                  | simple_expression . MINUS term

    PLUS   shift, and go to state 32
    MINUS  shift, and go to state 33

    $default  reduce using rule 27 (expression)


State 22

   32 simple_expression: term .
   33 term: term . MULT factor
   34     | term . DIV factor

    MULT  shift, and go to state 34
    DIV   shift, and go to state 35

    $default  reduce using rule 32 (simple_expression)


State 23

   35 term: factor .

    $default  reduce using rule 35 (term)


State 24

    9 function_definition: INT IDENTIFIER LPAREN RPAREN . compound_statement

    LBRACE  shift, and go to state 36

    compound_statement  go to state 37


State 25

    6 declaration: INT IDENTIFIER LBRACKET RBRACKET . SEMICOLON
    7            | INT IDENTIFIER LBRACKET RBRACKET . ASSIGN array_initializer SEMICOLON

    ASSIGN     shift, and go to state 38
    SEMICOLON  shift, and go to state 39


State 26

   25 expression: IDENTIFIER ASSIGN . expression

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    LPAREN          shift, and go to state 18

    expression         go to state 40
    function_call      go to state 20
    simple_expression  go to state 21
    term               go to state 22
    factor             go to state 23


State 27

   29 function_call: IDENTIFIER LPAREN . argument_list_opt RPAREN

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    LPAREN          shift, and go to state 18

    $default  reduce using rule 42 (argument_list_opt)

    expression         go to state 41
    function_call      go to state 20
    simple_expression  go to state 21
    term               go to state 22
    factor             go to state 23
    argument_list_opt  go to state 42
    argument_list      go to state 43


State 28

   38 factor: IDENTIFIER LBRACKET . expression RBRACKET

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    LPAREN          shift, and go to state 18

    expression         go to state 44
    function_call      go to state 20
    simple_expression  go to state 21
    term               go to state 22
    factor             go to state 23


State 29

   28 expression: SIZEOF LPAREN . expression RPAREN

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    LPAREN          shift, and go to state 18

    expression         go to state 45
    function_call      go to state 20
    simple_expression  go to state 21
    term               go to state 22
    factor             go to state 23


State 30

   36 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 46


State 31

    5 declaration: INT IDENTIFIER ASSIGN expression SEMICOLON .

    $default  reduce using rule 5 (declaration)


State 32

   30 simple_expression: simple_expression PLUS . term

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    LPAREN          shift, and go to state 18

    term    go to state 48
    factor  go to state 23


State 33

   31 simple_expression: simple_expression MINUS . term

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    LPAREN          shift, and go to state 18

    term    go to state 49
    factor  go to state 23


State 34

   33 term: term MULT . factor

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    LPAREN          shift, and go to state 18

    factor  go to state 50


State 35

   34 term: term DIV . factor

    IDENTIFIER      shift, and go to state 47
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    LPAREN          shift, and go to state 18

    factor  go to state 51


State 36

   10 compound_statement: LBRACE . statements RBRACE

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    RETURN          shift, and go to state 52
    IF              shift, and go to state 53
    FOR             shift, and go to state 54
    WHILE           shift, and go to state 55
    SEMICOLON       shift, and go to state 56
    LPAREN          shift, and go to state 18
    LBRACE          shift, and go to state 36

    compound_statement    go to state 57
    statements            go to state 58
    statement             go to state 59
    expression_statement  go to state 60
    selection_statement   go to state 61
    iteration_statement   go to state 62
    jump_statement        go to state 63
    expression            go to state 64
    function_call         go to state 20
    simple_expression     go to state 21
    term                  go to state 22
    factor                go to state 23


State 37

    9 function_definition: INT IDENTIFIER LPAREN RPAREN compound_statement .

    $default  reduce using rule 9 (function_definition)


State 38

    7 declaration: INT IDENTIFIER LBRACKET RBRACKET ASSIGN . array_initializer SEMICOLON

    LBRACE  shift, and go to state 65

    array_initializer  go to state 66


State 39

    6 declaration: INT IDENTIFIER LBRACKET RBRACKET SEMICOLON .

    $default  reduce using rule 6 (declaration)


State 40

   25 expression: IDENTIFIER ASSIGN expression .

    $default  reduce using rule 25 (expression)


State 41

   44 argument_list: expression .

    $default  reduce using rule 44 (argument_list)


State 42

   29 function_call: IDENTIFIER LPAREN argument_list_opt . RPAREN

    RPAREN  shift, and go to state 67


State 43

   43 argument_list_opt: argument_list .
   45 argument_list: argument_list . COMMA expression

    COMMA  shift, and go to state 68

    $default  reduce using rule 43 (argument_list_opt)


State 44

   38 factor: IDENTIFIER LBRACKET expression . RBRACKET

    RBRACKET  shift, and go to state 69


State 45

   28 expression: SIZEOF LPAREN expression . RPAREN

    RPAREN  shift, and go to state 70


State 46

   36 factor: LPAREN expression RPAREN .

    $default  reduce using rule 36 (factor)


State 47

   37 factor: IDENTIFIER .
   38       | IDENTIFIER . LBRACKET expression RBRACKET

    LBRACKET  shift, and go to state 28

    $default  reduce using rule 37 (factor)


State 48

   30 simple_expression: simple_expression PLUS term .
   33 term: term . MULT factor
   34     | term . DIV factor

    MULT  shift, and go to state 34
    DIV   shift, and go to state 35

    $default  reduce using rule 30 (simple_expression)


State 49

   31 simple_expression: simple_expression MINUS term .
   33 term: term . MULT factor
   34     | term . DIV factor

    MULT  shift, and go to state 34
    DIV   shift, and go to state 35

    $default  reduce using rule 31 (simple_expression)


State 50

   33 term: term MULT factor .

    $default  reduce using rule 33 (term)


State 51

   34 term: term DIV factor .

    $default  reduce using rule 34 (term)


State 52

   24 jump_statement: RETURN . expression SEMICOLON

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    LPAREN          shift, and go to state 18

    expression         go to state 71
    function_call      go to state 20
    simple_expression  go to state 21
    term               go to state 22
    factor             go to state 23


State 53

   20 selection_statement: IF . LPAREN expression RPAREN statement
   21                    | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 72


State 54

   22 iteration_statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 73


State 55

   23 iteration_statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 74


State 56

   19 expression_statement: SEMICOLON .

    $default  reduce using rule 19 (expression_statement)


State 57

   14 statement: compound_statement .

    $default  reduce using rule 14 (statement)


State 58

   10 compound_statement: LBRACE statements . RBRACE
   11 statements: statements . statement

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    RETURN          shift, and go to state 52
    IF              shift, and go to state 53
    FOR             shift, and go to state 54
    WHILE           shift, and go to state 55
    SEMICOLON       shift, and go to state 56
    LPAREN          shift, and go to state 18
    LBRACE          shift, and go to state 36
    RBRACE          shift, and go to state 75

    compound_statement    go to state 57
    statement             go to state 76
    expression_statement  go to state 60
    selection_statement   go to state 61
    iteration_statement   go to state 62
    jump_statement        go to state 63
    expression            go to state 64
    function_call         go to state 20
    simple_expression     go to state 21
    term                  go to state 22
    factor                go to state 23


State 59

   12 statements: statement .

    $default  reduce using rule 12 (statements)


State 60

   13 statement: expression_statement .

    $default  reduce using rule 13 (statement)


State 61

   15 statement: selection_statement .

    $default  reduce using rule 15 (statement)


State 62

   16 statement: iteration_statement .

    $default  reduce using rule 16 (statement)


State 63

   17 statement: jump_statement .

    $default  reduce using rule 17 (statement)


State 64

   18 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 77


State 65

   46 array_initializer: LBRACE . initializer_list RBRACE

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    LPAREN          shift, and go to state 18

    expression         go to state 78
    function_call      go to state 20
    simple_expression  go to state 21
    term               go to state 22
    factor             go to state 23
    initializer_list   go to state 79


State 66

    7 declaration: INT IDENTIFIER LBRACKET RBRACKET ASSIGN array_initializer . SEMICOLON

    SEMICOLON  shift, and go to state 80


State 67

   29 function_call: IDENTIFIER LPAREN argument_list_opt RPAREN .

    $default  reduce using rule 29 (function_call)


State 68

   45 argument_list: argument_list COMMA . expression

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    LPAREN          shift, and go to state 18

    expression         go to state 81
    function_call      go to state 20
    simple_expression  go to state 21
    term               go to state 22
    factor             go to state 23


State 69

   38 factor: IDENTIFIER LBRACKET expression RBRACKET .

    $default  reduce using rule 38 (factor)


State 70

   28 expression: SIZEOF LPAREN expression RPAREN .

    $default  reduce using rule 28 (expression)


State 71

   24 jump_statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 82


State 72

   20 selection_statement: IF LPAREN . expression RPAREN statement
   21                    | IF LPAREN . expression RPAREN statement ELSE statement

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    LPAREN          shift, and go to state 18

    expression         go to state 83
    function_call      go to state 20
    simple_expression  go to state 21
    term               go to state 22
    factor             go to state 23


State 73

   22 iteration_statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    SEMICOLON       shift, and go to state 56
    LPAREN          shift, and go to state 18

    expression_statement  go to state 84
    expression            go to state 64
    function_call         go to state 20
    simple_expression     go to state 21
    term                  go to state 22
    factor                go to state 23


State 74

   23 iteration_statement: WHILE LPAREN . expression RPAREN statement

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    LPAREN          shift, and go to state 18

    expression         go to state 85
    function_call      go to state 20
    simple_expression  go to state 21
    term               go to state 22
    factor             go to state 23


State 75

   10 compound_statement: LBRACE statements RBRACE .

    $default  reduce using rule 10 (compound_statement)


State 76

   11 statements: statements statement .

    $default  reduce using rule 11 (statements)


State 77

   18 expression_statement: expression SEMICOLON .

    $default  reduce using rule 18 (expression_statement)


State 78

   47 initializer_list: expression .

    $default  reduce using rule 47 (initializer_list)


State 79

   46 array_initializer: LBRACE initializer_list . RBRACE
   48 initializer_list: initializer_list . COMMA expression

    COMMA   shift, and go to state 86
    RBRACE  shift, and go to state 87


State 80

    7 declaration: INT IDENTIFIER LBRACKET RBRACKET ASSIGN array_initializer SEMICOLON .

    $default  reduce using rule 7 (declaration)


State 81

   45 argument_list: argument_list COMMA expression .

    $default  reduce using rule 45 (argument_list)


State 82

   24 jump_statement: RETURN expression SEMICOLON .

    $default  reduce using rule 24 (jump_statement)


State 83

   20 selection_statement: IF LPAREN expression . RPAREN statement
   21                    | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 88


State 84

   22 iteration_statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    SEMICOLON       shift, and go to state 56
    LPAREN          shift, and go to state 18

    expression_statement  go to state 89
    expression            go to state 64
    function_call         go to state 20
    simple_expression     go to state 21
    term                  go to state 22
    factor                go to state 23


State 85

   23 iteration_statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 90


State 86

   48 initializer_list: initializer_list COMMA . expression

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    LPAREN          shift, and go to state 18

    expression         go to state 91
    function_call      go to state 20
    simple_expression  go to state 21
    term               go to state 22
    factor             go to state 23


State 87

   46 array_initializer: LBRACE initializer_list RBRACE .

    $default  reduce using rule 46 (array_initializer)


State 88

   20 selection_statement: IF LPAREN expression RPAREN . statement
   21                    | IF LPAREN expression RPAREN . statement ELSE statement

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    RETURN          shift, and go to state 52
    IF              shift, and go to state 53
    FOR             shift, and go to state 54
    WHILE           shift, and go to state 55
    SEMICOLON       shift, and go to state 56
    LPAREN          shift, and go to state 18
    LBRACE          shift, and go to state 36

    compound_statement    go to state 57
    statement             go to state 92
    expression_statement  go to state 60
    selection_statement   go to state 61
    iteration_statement   go to state 62
    jump_statement        go to state 63
    expression            go to state 64
    function_call         go to state 20
    simple_expression     go to state 21
    term                  go to state 22
    factor                go to state 23


State 89

   22 iteration_statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    LPAREN          shift, and go to state 18

    expression         go to state 93
    function_call      go to state 20
    simple_expression  go to state 21
    term               go to state 22
    factor             go to state 23


State 90

   23 iteration_statement: WHILE LPAREN expression RPAREN . statement

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    RETURN          shift, and go to state 52
    IF              shift, and go to state 53
    FOR             shift, and go to state 54
    WHILE           shift, and go to state 55
    SEMICOLON       shift, and go to state 56
    LPAREN          shift, and go to state 18
    LBRACE          shift, and go to state 36

    compound_statement    go to state 57
    statement             go to state 94
    expression_statement  go to state 60
    selection_statement   go to state 61
    iteration_statement   go to state 62
    jump_statement        go to state 63
    expression            go to state 64
    function_call         go to state 20
    simple_expression     go to state 21
    term                  go to state 22
    factor                go to state 23


State 91

   48 initializer_list: initializer_list COMMA expression .

    $default  reduce using rule 48 (initializer_list)


State 92

   20 selection_statement: IF LPAREN expression RPAREN statement .
   21                    | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 95

    $default  reduce using rule 20 (selection_statement)


State 93

   22 iteration_statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 96


State 94

   23 iteration_statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 23 (iteration_statement)


State 95

   21 selection_statement: IF LPAREN expression RPAREN statement ELSE . statement

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    RETURN          shift, and go to state 52
    IF              shift, and go to state 53
    FOR             shift, and go to state 54
    WHILE           shift, and go to state 55
    SEMICOLON       shift, and go to state 56
    LPAREN          shift, and go to state 18
    LBRACE          shift, and go to state 36

    compound_statement    go to state 57
    statement             go to state 97
    expression_statement  go to state 60
    selection_statement   go to state 61
    iteration_statement   go to state 62
    jump_statement        go to state 63
    expression            go to state 64
    function_call         go to state 20
    simple_expression     go to state 21
    term                  go to state 22
    factor                go to state 23


State 96

   22 iteration_statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement

    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 14
    NUMBER          shift, and go to state 15
    FLOAT           shift, and go to state 16
    SIZEOF          shift, and go to state 17
    RETURN          shift, and go to state 52
    IF              shift, and go to state 53
    FOR             shift, and go to state 54
    WHILE           shift, and go to state 55
    SEMICOLON       shift, and go to state 56
    LPAREN          shift, and go to state 18
    LBRACE          shift, and go to state 36

    compound_statement    go to state 57
    statement             go to state 98
    expression_statement  go to state 60
    selection_statement   go to state 61
    iteration_statement   go to state 62
    jump_statement        go to state 63
    expression            go to state 64
    function_call         go to state 20
    simple_expression     go to state 21
    term                  go to state 22
    factor                go to state 23


State 97

   21 selection_statement: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 21 (selection_statement)


State 98

   22 iteration_statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement .

    $default  reduce using rule 22 (iteration_statement)
